--- a/src/main/resources/templates/employee_creation.html
+++ b/src/main/resources/templates/employee_creation.html
@@ -26,6 +26,10 @@
             <input required name="address" th:field="*{address}" class="form-control" id="inputAddress">
         </div>
         <div class="col-lg-4 col-md-6">
+            <label for="salary" class="form-label">Salary</label>
+            <input required id="salary" name="firstName" th:field="*{grossSalary}" type="text" class="form-control">
+        </div>
+        <div class="col-lg-4 col-md-6">
             <label for="image" class="form-label">Address</label>
             <input name="address" type="file" th:field="*{image}" class="form-control" id="image">
         </div>
