--- a/src/main/resources/templates/employee_show.html
+++ b/src/main/resources/templates/employee_show.html
@@ -90,7 +90,10 @@
             <p th:text="${position.name}" class="form-control show-fields"></p>
         </div>
     </div>
-
+    <div class="col-lg-3 col-md-4 col-sm-6 col-12">
+        <label for="age" class="form-label text-black-50">Age</label>
+        <p th:text="${employee.age}" id="age" class="form-control show-fields"></p>
+    </div>
     <a th:href="'/server/employee/pdf/download/' + *{employee.id}">
         <button class="btn btn-primary">Download to pdf</button>
     </a>
