chore: add birthday enum

--- a/src/main/resources/templates/employee_creation.html
+++ b/src/main/resources/templates/employee_creation.html
@@ -79,7 +79,8 @@
                 <option th:each="sex : ${T(com.example.prog4.repository.entity.enums.Sex).values()}" th:value="${sex}"
                         th:text="${sex}"></option>
             </select>
-        </div>
+        </div>ar
+
         <div class="col-md-6">
             <label for="csp" class="form-label">CSP</label>
             <select id="csp" name="csp" class="form-select" th:field="*{csp}">
